Added new font file

--- a/Html/port_home.html
+++ b/Html/port_home.html
@@ -5,10 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Designs 4 U</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Glory:ital,wght@0,100..800;1,100..800&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="../CSS/sty_home.css">
 </head>
 
@@ -19,8 +15,8 @@
             <div class="right">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="port_services.html" target="_blank">Services</a></li>
-                    <li><a href="port_about.html" target="_blank">About</a></li>
+                    <li><a href="#Services">Services</a></li>
+                    <li><a href="#About" target="_blank">About</a></li>
                     <li><a href="port_contactme.html" target="_blank">Contact Me</a></li>
                 </ul>
             </div>
@@ -46,7 +42,7 @@
         <section class="tsec">
             <div class="container">
                 <div class="box" id="box-1">
-                    <div>
+                    <div id="About">
                         <h2>About</h2>
                     </div>
                     <div>
@@ -56,7 +52,7 @@
                     </div>
                 </div>
                 <div class="box" id="box-2">
-                    <div>
+                    <div id="Services">
                         <h2>Services</h2>
                     </div>
                     <div>
