--- a/Html/port_about.html
+++ b/Html/port_about.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Glory:ital,wght@0,100..800;1,100..800&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="../CSS/sty_about.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="left">Web Designs 4 U</div>
+            <div class="left"><a href="port_home.html">Web Designs 4 U</a></div>
+            <input type='checkbox' id='check' />
             <div class="right">
                 <ul>
                     <li><a href="port_home.html" target="_blank">Home</a></li>
@@ -23,21 +23,30 @@
                     <li><a href="#">About</a></li>
                     <li><a href="port_contactme.html" target="_blank">Contact Me</a></li>
                 </ul>
+                <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
             </div>
+            <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
         </nav>
     </header>
 
     <main>
-        <div><h1>About</h1></div>
-        <div><p class="hp">Hello. This is Web Designs 4 U. My name is Balaji. I am a passionate web developer and
-            designer. I am an under graduate student of Indian Institute of Technology, Kharagpur,
-            India.</p>
-        </div>
-        <div>
-            <p class="hp">I am into development, design, marketing, and more.</p>
-        </div>
-        <div class="bp">
-            <p>I use my skills in web development and designing to help entrepreneur, content creators and more to have their own websites. I would really enjoy to work with companies and other developers, learn things and making good bonds.</p>
+        <div class="info">
+            <div>
+                <h1>About</h1>
+            </div>
+            <div>
+                <p class="hp">Hello. This is Web Designs 4 U. My name is Balaji. I am a passionate web developer and
+                    designer. I am an under graduate student of Indian Institute of Technology, Kharagpur,
+                    India.</p>
+            </div>
+            <div>
+                <p class="hp">I am into development, designing and more.</p>
+            </div>
+            <div class="bp">
+                <p>I use my skills in web development and designing to help entrepreneur, content creators and more to
+                    have their own websites. I would really enjoy to work with companies and other developers, learn
+                    things and making good bonds.</p>
+            </div>
         </div>
     </main>
 
