--- a/Html/port_contactme.html
+++ b/Html/port_contactme.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Glory:ital,wght@0,100..800;1,100..800&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="../CSS/sty_contactme.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header>
         <nav>
-            <div class="left">Web Designs 4 U</div>
+            <div class="left"><a href="port_home.html">Web Designs 4 U</a></div>
+            <input type='checkbox' id='check' />
             <div class="right">
                 <ul>
                     <li><a href="port_home.html" target="_blank">Home</a></li>
@@ -21,19 +23,25 @@
                     <li><a href="port_about.html" target="_blank">About</a></li>
                     <li><a href="#">Contact Me</a></li>
                 </ul>
+                <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
             </div>
+            <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
         </nav>
     </header>
 
     <main>
-        <h1>Contact</h1>
-        <div class="hp">
-            <p>I'm actively seeking collaborations with companies, agencies, and individuals, aiming to bring my diverse design expertise to the table. Let's work together to address genuine business challenges, leveraging our combined experience and knowledge.</p>
-        </div>
-        <div class="bp">
-            <p>Hello, wanna send a message and get to know about me and my work even more? or need any
-                clarification about branding related topics? Always feel free to send a message here on
-                this website or on any of my social media handles</p>
+        <div class="main">
+            <h1>Contact</h1>
+            <div class="hp">
+                <p>I'm actively seeking collaborations with companies, agencies, and individuals, aiming to bring my diverse
+                    design expertise to the table. Let's work together to address genuine business challenges, leveraging
+                    our combined experience and knowledge.</p>
+            </div>
+            <div class="bp">
+                <p>Hello, wanna send a message and get to know about me and my work even more? or need any
+                    clarification about branding related topics? Always feel free to send a message here on
+                    this website or on any of my social media handles</p>
+            </div>
         </div>
 
         <div class="details">
@@ -53,12 +61,14 @@
                     <input type="number" name="" required placeholder="Phone Number">
                 </div>
                 <div class="form-group">
-                    <textarea name="" id="" cols="30" rows="10" required placeholder="Type your message here..."></textarea>
+                    <textarea name="" id="" cols="30" rows="10" required
+                        placeholder="Type your message here..."></textarea>
                 </div>
             </form>
             <div>
                 <button class="btn">Submit</button>
             </div>
+        </div>
     </main>
 
     <footer>
@@ -78,4 +88,5 @@
         <div class="cpyr">Copyright &copy; 2027 - www.webdesigns4u.com - All rights reserved</div>
     </footer>
 </body>
+
 </html>
