--- a/Html/port_home.html
+++ b/Html/port_home.html
@@ -6,20 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Designs 4 U</title>
     <link rel="stylesheet" href="../CSS/sty_home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="left">Web Designs 4 U</div>
+            <div class="left"><a href="#">Web Designs 4 U</a></div>
+            <input type='checkbox' id='check' />
             <div class="right">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#Services">Services</a></li>
-                    <li><a href="#About" target="_blank">About</a></li>
-                    <li><a href="port_contactme.html" target="_blank">Contact Me</a></li>
+                    <li><a href="#box-2">Services</a></li>
+                    <li><a href="#box-1">About</a></li>
+                    <li><a href="#box-3">Contact Me</a></li>
                 </ul>
+                <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
             </div>
+            <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
         </nav>
     </header>
 
@@ -30,12 +34,6 @@
                 <p>These days, it is necessary for every entrepreneur, content creators, artists, designers and many
                     others to have an own website to display their work experience and to contact with their clints. I
                     help you to build your own website.</p>
-            </div>
-        </section>
-
-        <section class="ssec">
-            <div>
-                <img src="../imgs/h2.png.png" alt="">
             </div>
         </section>
 
@@ -62,7 +60,7 @@
                     </div>
                 </div>
                 <div class="box" id="box-3">
-                    <div>
+                    <div id="Contact_Me">
                         <h2>Contact Me</h2>
                     </div>
                     <div>
