--- a/Html/port_services.html
+++ b/Html/port_services.html
@@ -5,17 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Glory:ital,wght@0,100..800;1,100..800&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="../CSS/sty_services.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="left">Web Designs 4 U</div>
+            <div class="left"><a href="port_home.html">Web Designs 4 U</a></div>
+            <input type='checkbox' id='check' />
             <div class="right">
                 <ul>
                     <li><a href="port_home.html" target="_blank">Home</a></li>
@@ -23,7 +21,9 @@
                     <li><a href="port_about.html" target="_blank">About</a></li>
                     <li><a href="port_contactme.html" target="_blank">Contact Me</a></li>
                 </ul>
+                <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
             </div>
+            <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
         </nav>
     </header>
 
@@ -73,29 +73,29 @@
                 </div>
             </div>
         </div>
-
-        <div class="details">
-            <h2>Want to spar together?</h2>
-            <p>Good plan. It just might change your life. Leave your details here and I will call you as soon as possible.</p>
-            <form action="noaction.php">
-                <div class="form-group">
-                    <input type="text" name="" required placeholder="Company Name">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="" required placeholder="Your Name">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="" required placeholder="Email address">
-                </div>
-                <div class="form-group">
-                    <input type="number" name="" required placeholder="Phone Number">
-                </div>
-            </form>
-            <div>
-                <button class="btn">Submit</button>
-            </div>
-        </div>
     </main>
+
+    <div class="details">
+        <h2>Want to spar together?</h2>
+        <p>Good plan. It just might change your life. Leave your details here and I will call you as soon as possible.</p>
+        <form action="noaction.php">
+            <div class="form-group">
+                <input type="text" name="" required placeholder="Company Name">
+            </div>
+            <div class="form-group">
+                <input type="text" name="" required placeholder="Your Name">
+            </div>
+            <div class="form-group">
+                <input type="text" name="" required placeholder="Email address">
+            </div>
+            <div class="form-group">
+                <input type="number" name="" required placeholder="Phone Number">
+            </div>
+        </form>
+        <div>
+            <button class="btn">Submit</button>
+        </div>
+    </div>
 
     <footer>
         <div class="left">Web Designs 4 U</div>
