--- a/port_contactme.html
+++ b/port_contactme.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link rel="stylesheet" href="../CSS/sty_contactme.css">
+    <link rel="stylesheet" href="sty_contactme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,11 +14,11 @@
 <body>
     <header>
         <nav>
-            <div class="left"><a href="port_home.html">Web Designs 4 U</a></div>
+            <div class="left"><a href="index.html">Web Designs 4 U</a></div>
             <input type='checkbox' id='check' />
             <div class="right">
                 <ul>
-                    <li><a href="port_home.html" target="_blank">Home</a></li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
                     <li><a href="port_services.html" target="_blank">Services</a></li>
                     <li><a href="port_about.html" target="_blank">About</a></li>
                     <li><a href="#">Contact Me</a></li>
