--- a/port_services.html
+++ b/port_services.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-    <link rel="stylesheet" href="../CSS/sty_services.css">
+    <link rel="stylesheet" href="sty_services.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="left"><a href="port_home.html">Web Designs 4 U</a></div>
+            <div class="left"><a href="index.html">Web Designs 4 U</a></div>
             <input type='checkbox' id='check' />
             <div class="right">
                 <ul>
-                    <li><a href="port_home.html" target="_blank">Home</a></li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="port_about.html" target="_blank">About</a></li>
                     <li><a href="port_contactme.html" target="_blank">Contact Me</a></li>
